--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/WhatsApp Image 2023-11-24 at 09.11.35.jpeg" />
+    <link rel="icon" type="image/jpeg+xml" href="/WhatsApp Image 2023-11-24 at 09.11.35.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tweter clone</title>
+    <title>twiter_clone</title>
   </head>
   <body>
     <div id="root"></div>
